==> jerabaul29/2024_openlog_artemis_custom_logger/example_use_ism330dhcx/lib/ISM330DHCX/src/ISM330DHCXSensor.cpp <==
#include "ISM330DHCXSensor.h"

ISM330DHCXStatusTypeDef ISM330DHCXSensor::begin()
{
  if (dev_spi) {
    // Configure CS pin
    pinMode(cs_pin, OUTPUT);
    digitalWrite(cs_pin, HIGH);
  }

  if (Init() != ISM330DHCX_OK) {
    return ISM330DHCX_ERROR;
  }

  return ISM330DHCX_OK;
}

ISM330DHCXStatusTypeDef ISM330DHCXSensor::end()
{
  /* Disable both acc and gyro */
  if (ACC_Disable() != ISM330DHCX_OK) {
    return ISM330DHCX_ERROR;
  }

  if (GYRO_Disable() != ISM330DHCX_OK) {
    return ISM330DHCX_ERROR;
  }

  /* Reset CS configuration */
  if (dev_spi) {
    // Configure CS pin
    pinMode(cs_pin, INPUT);
  }

  return ISM330DHCX_OK;
}
