==> PUT-Motorsport/PUTM_EV_Data_Acquisition_Cards_2022/Core/Src/ISM330DHCXSensor.cpp <==
#include "ISM330DHCXSensor.hpp"

ISM330DHCXStatusTypeDef ISM330DHCXSensor::begin() {
	if (HAL_SPI_Init(&hspi1) != HAL_OK) {
		Error_Handler();
	}
	// Configure CS pin
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_SET);

	if (Init() != ISM330DHCX_OK) {
		return ISM330DHCX_ERROR;
	}

	return ISM330DHCX_OK;
}

ISM330DHCXStatusTypeDef ISM330DHCXSensor::end() {
	/* Disable both acc and gyro */
	if (ACC_Disable() != ISM330DHCX_OK) {
		return ISM330DHCX_ERROR;
	}

	if (GYRO_Disable() != ISM330DHCX_OK) {
		return ISM330DHCX_ERROR;
	}

	/* Reset CS configuration */

	if (HAL_SPI_Init(&hspi1) != HAL_OK) {
		Error_Handler();
	}
	// Configure CS pin
	HAL_GPIO_WritePin(SPI1_CS_GPIO_Port, SPI1_CS_Pin, GPIO_PIN_RESET);

	return ISM330DHCX_OK;
}
